# merkle-tree-solana

./: Cargo.toml
src/: errors.rs  lib.rs  processor.rs  state.rs  utils.rs
src/instructions/: build_proof.rs  build_tree.rs  mod.rs  verify_proof.rs
test-client/: client.rs
